<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updateExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="My Expenses"

            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/holderLinear"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/displaytext"
            android:layout_width="404dp"
            android:layout_height="41dp"
            android:orientation="horizontal">

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:background="@color/Steel_Blue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/type_Re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/Type"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/Azure" />

            <TextView
                android:id="@+id/note_Re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/Note"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/Azure" />

            <TextView
                android:id="@+id/amount_Re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/Amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/Azure" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>

</androidx.cardview.widget.CardView>