<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgcolour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <RelativeLayout

        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:orientation="vertical"
        android:background="@color/Steel_Blue">

        <View
            android:id="@+id/imageofadd"
            android:layout_width="192dp"
            android:layout_height="123dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:layout_marginBottom="41dp"
            android:background="@drawable/expenses" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView

            android:id="@+id/updateExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/AddExpenses"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal|vertical|none"
        android:fadingEdgeLength="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/Snow"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView

                        android:id="@+id/amounttext"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        android:text="@string/Amount"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/amount_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="13dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="10dp"
                        android:height="48dp"

                        android:hint="enter amount"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/typetext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        android:text="@string/Type"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/type_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"

                        android:hint="enter type"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView

                        android:id="@+id/notetext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="19dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"

                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Note"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/note_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:height="48dp"
                        android:hint="enter note"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <Button
                        android:id="@+id/expenseSave"
                        android:layout_width="236dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="66dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp"
                        android:background="@color/black"
                        android:text="@string/save" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>